Modify webpack setup

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>webpackky</title>
+  <title>Webpack Exercise</title>
+
 </head>
 <body>
-  <h1>Hello Webpack!</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, autem. Quasi eligendi necessitatibus iusto delectus similique blanditiis vitae fuga ea?</p>
-  <div class="container">A</div>
-  <div class="container">B</div>
-  <div class="container">C</div>
-  <div class="test">Test1</div>
-  <div class="test">Test2</div>
-  <div class="test">Test3</div>
+  <h1>Hello webpack!</h1>
+
 </body>
 </html>
